crates/test-files/fixtures/compile_errors/ctx_pure.fe
pub fn foo(ctx: Context) {}
